# 100daysofcode

./: .gitignore  README.md  TESTING_GUIDE.md  main.py  practice_tests.py  pyproject.toml
pong/: ball.py  main.py  padel.py  scoreboard.py
sandbox/: main.py
snake_game_template/: main.py  scoreboard.py  snake.py
turtle_crossing/: main.py  scoreboard.py
turtle_crossing/game_objects/: car_manager.py  player.py
turtle_crossing/tests/: test_player_detailed.py
