[project]
name = "100daysofcode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.21.6",
    "pandas>=1.1.5",
]

[dependency-groups]
dev = [
    "ipykernel>=6.16.2",
    "jupyterlab>=3.6.8",
    "mypy>=1.4.1",
    "pre-commit>=2.21.0",
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "ruff>=0.15.12",
]
